applications/vtt/vtt.yaml
apiVersion: v1
kind: Service
metadata:
  name: vtt
  namespace: vtt
spec:
  ports:
    - port: 80
      targetPort: 30000
---
# In order to avoid having to setup VTT again, we point to the existing docker compose setup.
apiVersion: v1
kind: Endpoints
metadata:
  name: vtt
  namespace: vtt
subsets:
  - addresses:
      - ip: "192.168.2.254"
    ports:
      - port: 30000
